--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -14,5 +14,13 @@ html(lang="en")
           li.main-header__item
             a(class={active: path === '/'} href="/") Shop
           li.main-header__item
+            a(class={active: path === '/products'} href="/products") Products
+          li.main-header__item
+            a(class={active: path === '/cart'} href="/cart") Cart
+          li.main-header__item
+            a(class={active: path === '/orders'} href="/orders") Orders
+          li.main-header__item
             a(class={active: path === '/admin/add-product'} href="/admin/add-product") Add Product
+          li.main-header__item
+            a(class={active: path === '/admin/products'} href="/admin/products") Admin Products
     block content
