--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -18,7 +18,8 @@ block content
               h2.product__price #{product.price}
               p.product__description #{product.description}
             .card__actions
-              form(action="/add-to-cart" method="POST")
-                button.btn Add to Cart
+              a.btn(href="/admin/edit-product") Edit
+              form(action="/admin/delete-product" method="POST")
+                button.btn(type="submit") Delete
     else
       h1 No products yet.
