--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -13,12 +13,11 @@ block content
             header.card__header
               h1.product__title #{product.title}
             .card__image
-              img(src=product.imageUrl alt=product.title)
+              img(src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png" alt="A Book")
             .card__content
               h2.product__price #{product.price}
               p.product__description #{product.description}
             .card__actions
-              form(action="/add-to-cart" method="POST")
-                button.btn Add to Cart
+              button.btn Add to Cart
     else
       h1 No products yet.
