--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -8,7 +8,9 @@ html(lang="en")
     link(rel="stylesheet" href="/css/main.css")
     block styles
   body
+    .backdrop
     header.main-header
+      button#side-menu-toggle Menu
       nav.main-header__nav
         ul.main-header__item-list
           li.main-header__item
@@ -23,4 +25,19 @@ html(lang="en")
             a(class={active: path === '/admin/add-product'} href="/admin/add-product") Add Product
           li.main-header__item
             a(class={active: path === '/admin/products'} href="/admin/products") Admin Products
+      nav.mobile-nav
+        ul.mobile-nav__item-list
+          li.mobile-nav__item
+            a(class={active: path === '/'} href="/") Shop
+          li.mobile-nav__item
+            a(class={active: path === '/products'} href="/products") Products
+          li.mobile-nav__item
+            a(class={active: path === '/cart'} href="/cart") Cart
+          li.mobile-nav__item
+            a(class={active: path === '/orders'} href="/orders") Orders
+          li.mobile-nav__item
+            a(class={active: path === '/admin/add-product'} href="/admin/add-product") Add Product
+          li.mobile-nav__item
+            a(class={active: path === '/admin/products'} href="/admin/products") Admin Products
     block content
+    script(src="/js/main.js")
