--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,14 @@ form {
   display: inline;
 }
 
+img {
+  max-width: 350px;
+}
+
+.centered {
+  text-align: center;
+}
+
 .main-header {
   width: 100%;
   height: 3.5rem;
