--- a/views/admin/edit-product.pug
+++ b/views/admin/edit-product.pug
@@ -1,1 +1,45 @@
 extends ../layouts/main-layout.pug
+
+block styles
+  link(rel="stylesheet" href="/css/forms.css")
+  link(rel="stylesheet" href="/css/product.css")
+
+block content
+  main
+    if editMode
+      form.product-form(action="/admin/edit-product" method="POST")
+        .form-control
+          label(for="title") Title
+          input#title(type="text" name="title" value=product.title)
+        .form-control
+          label(for="imageUrl") Image URL
+          input#imageUrl(type="text" name="imageUrl" value=product.imageUrl)
+        .form-control
+          label(for="price") Price
+          input#description(type="number" name="price" step="0.01" value=product.price)
+        .form-control
+          label(for="description") Description
+          textarea#price(name="description", rows="5")= product.description
+        input(type="hidden", value=product.id name="id")
+        if editMode
+          button.btn(type="submit") Update product
+        else
+          button.btn(type="submit") Add Product
+    else
+      form.product-form(action="/admin/add-product" method="POST")
+        .form-control
+          label(for="title") Title
+          input#title(type="text" name="title")
+        .form-control
+          label(for="imageUrl") Image URL
+          input#imageUrl(type="text" name="imageUrl")
+        .form-control
+          label(for="price") Price
+          input#description(type="number" name="price" step="0.01")
+        .form-control
+          label(for="description") Description
+          textarea#price(name="description", rows="5")
+        if editMode
+          button.btn(type="submit") Update product
+        else
+          button.btn(type="submit") Add Product
